# moveit-staubli

./: .gitignore  README.md  docker-compose-humble.yaml
ros_ws/src/tx40_controller/: CMakeLists.txt  package.xml
ros_ws/src/tx40_controller/config/: tx40_controllers.yaml
ros_ws/src/tx40_controller/launch/: tx40_controllers.launch.py
ros_ws/src/tx40_moveit/: CMakeLists.txt  package.xml
ros_ws/src/tx40_moveit/config/: initial_position.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  tx40.srdf
ros_ws/src/tx40_moveit/include/tx40_moveit/: moveit_robot.hpp
ros_ws/src/tx40_moveit/launch/: launch_all.launch.py  moveit.launch.py
ros_ws/src/tx40_moveit/src/: moveit_robot.cpp  mtc_node.cpp  plan.cpp  plan_server_action.cpp
ros_ws/src/tx40_msgs/: CMakeLists.txt  package.xml
ros_ws/src/tx40_msgs/action/: Plan.action
ros_ws/src/tx40_simulation/: CMakeLists.txt  package.xml
ros_ws/src/tx40_simulation/launch/: display.launch.py  gazebo.launch.py  tx40_gazebo.launch.py
ros_ws/src/tx40_simulation/meshes/: base.stl  ee.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
ros_ws/src/tx40_simulation/rviz/: tx40.rviz
ros_ws/src/tx40_simulation/urdf/: tx40.urdf.xacro  tx40_gazebo.xacro  tx40_ros2_control.xacro
